syntax = "proto3";

option csharp_namespace = "RobotClient";

package robot;

service Robot {
  rpc GetRobots (GetRobotRequest) returns (GetRobotReply);
  rpc GetRobotsStream (GetRobotRequest) returns (stream	RobotModel);
}

message GetRobotRequest {
  
}

message GetRobotReply {
	repeated RobotModel robots = 1;
}

message RobotModel {
  string name = 1;
	string status = 2;
}

